--- a/README.ru.org
+++ b/README.ru.org
@@ -1,30 +1,16 @@
-* Shaoline: Путь Строки
+* Режим Shaoline: Путь Строки
 
-_"Дао, которое можно назвать, не есть постоянное Дао.  
-Мод, который можно увидеть — пора переделать."_
+_"Дао, о котором можно говорить, не есть вечное Дао.  
+Мод, который можно увидеть, скоро потребует реформ."_
 
-Когда ты открываешь Emacs и видишь строку от Shaoline —  
-знай: ты смотрел слишком пристально.  
+Когда открываешь Emacs и видишь строку, сотканную Shaoline,  
+знай: твой взгляд был слишком пристальным.  
 Истинный Shaoline не оставляет следа.  
-Строка появляется только тогда, когда сам Вечный Пустой Буфер вздыхает:  
-надо ли что-то сказать?
+Строка появляется только в те мгновения,  
+когда Великий Пустой Буфер вздыхает:  
+нужно ли что-то сказать?
 
----
-
-** За что любить Shaoline
-
-- *Минимализм*: Shaoline появляется только, когда есть что сказать. 
-- *Сегменты – просты*: Каждый сегмент — незрим, чист, не мешает другим, не цепляется за мирское.
-- *Настройка без усилия*: Всё понятно, всё открыто.  
-- *Время течёт*: Только естественные обновления — словно дождь стучит в окно, так Shaoline обновляется реакцией на события.
-- *Прозрачность и радость*: В Shaoline нет того, что нельзя постичь и изменить, если дух твой легок.
-- *Простота и прозрачность*: настройки Shaoline яснее, чем чай на рассвете Долины Вэй.
-
----
-
-** Как постичь Путь Shaoline
-
-Начинай, как делали древние:
+** Быстрый старт
 
 #+BEGIN_SRC emacs-lisp
 (use-package shaoline
@@ -33,123 +19,201 @@ _"Дао, которое можно назвать, не есть постоян
   (shaoline-mode 1))
 #+END_SRC
 
-Без use-package? Впусти истину напрямую:
+или для тех, кто не пользуется /use-package/:
 
 #+BEGIN_SRC emacs-lisp
+(require 'shaoline)
 (shaoline-mode 1)
 #+END_SRC
 
-Никакой child-frame, никакой window-modeline — Shaoline танцует только в echo area, недосягаем для суеты остального интерфейса.
+Никаких child-frame и оконных mode-line — Shaoline танцует лишь в echo area, невозмутимо среди суеты внешнего интерфейса.
 
----
+* Особенности
 
-** Учение о Сегментах
+- /Минимализм/: Строка Shaoline появляется только, когда есть что сказать.
+- /Сегменты по природе своей просты/: Каждый — затворник, чист, не привязан к миру, не мешает соседу.
+- /Лёгкая настройка/: Нет ничего скрытого, всё открыто взору.
+- /Время течёт неспешно/: Только когда дождь стучит в окно, Shaoline обновляется — по событию, а не по спешке.
+- /Прозрачность и Радость/: В Shaoline нет ничего недостижимого или неисправимого, если твой дух лёгок.
+- /Ясность и Простота/: Настройки просты, как утренний чай в Долине Вэй.
+- /Красивые иконки/: Для ярких иконок файлов/режимов/проектов установи [[https://github.com/domtronn/all-the-icons.el][all-the-icons]] (см. ЧАВО).
 
-_"Великий мастер не делит строку —  
-каждый фрагмент отдельный.  
-Но вместе они - путь Shaoline."_
+* Учение о сегментах
 
-Shaoline-сегменты — это монахи.  Каждый тесно связан с Пустотой,  но не пристаёт к соседу:
+"Мастер не делит строку —  
+каждый сегмент сам по себе,  
+но все вместе образуют Путь Shaoline."
+
+Сегменты в Shaoline — как монахи в безмолвном братстве,  
+каждый — близок к Пустоте и не прилипает к соседу:
 
 #+BEGIN_SRC emacs-lisp
 (setq shaoline-segments
       '((:left shaoline-segment-icon-and-buffer shaoline-segment-git-branch)
         (:center shaoline-segment-echo-message)
-        (:right shaoline-segment-project-name shaoline-segment-time)))
+        (:right shaoline-segment-project-name shaoline-segment-battery shaoline-segment-time)))
 #+END_SRC
 
-Расположи их, как камни в саду: убирай, переставляй, добавляй — без усилия и страхов.
+Располагай их, как камни в саду: убирай, переставляй, добавляй — свободно, не испытывая страха.
 
----
+* Переменные Shaoline вкратце
 
-** Как создать свой сегмент и не переродиться Жуком
+| Переменная                   | Описание                                         |
+|------------------------------+--------------------------------------------------|
+| shaoline-segments            | Задаёт порядок отображения сегментов             |
+| shaoline-autohide-modeline   | Скрывать ли стандартную mode-line (если t)       |
+| shaoline-timer-interval      | Как часто обновлять сегменты с таймером          |
+| shaoline-message-timeout     | Через сколько секунд Shaoline вернётся после сообщения |
+| shaoline-update-hooks        | Какие события вызывают обновление Shaoline        |
 
-_"Великий путь прост: пусть твоя функция возвращает строку."_
+* Примеры настройки
 
-Просто и тихо заведи новый сегмент:
+Чтобы увидеть и изменить все параметры в интерактивном интерфейсе:
+#+BEGIN_SRC emacs-lisp
+M-x customize-group RET shaoline RET
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+(setq shaoline-segments
+      '((:left shaoline-segment-icon-and-buffer shaoline-segment-git-branch)
+        (:center)
+        (:right)))
+#+END_SRC
+
+/Классика: только правый сегмент, остальные отключены:/
+
+#+BEGIN_SRC emacs-lisp
+(setq shaoline-segments
+      '((:left)
+        (:center)
+        (:right shaoline-segment-time)))
+#+END_SRC
+
+/Полная кастомизация (проект → git → часы):/
+
+#+BEGIN_SRC emacs-lisp
+(setq shaoline-segments
+      '((:left shaoline-segment-project-name)
+        (:center)
+        (:right shaoline-segment-git-branch shaoline-segment-time)))
+#+END_SRC
+
+* Как создать свой сегмент
+
+_"Путь всегда прост: пусть твоя функция возвращает строку."_
+
+Создавай свой сегмент тихо и мягко:
 
 #+BEGIN_SRC emacs-lisp
 (shaoline-define-segment shaoline-segment-buffer-size (buffer)
   "Показывает размер буфера."
   (format "%.1fK" (/ (buffer-size buffer) 1024.0)))
-#+END_SRC
-
-Присоединись к общине:
-
-#+BEGIN_SRC emacs-lisp
 (push 'shaoline-segment-buffer-size (alist-get :right shaoline-segments))
 #+END_SRC
 
-"Лучшее конфигурирование — когда ты не подозреваешь, что конфигурируешь."
+Или пример сегмента режима:
 
----
+#+BEGIN_SRC emacs-lisp
+(shaoline-define-segment shaoline-segment-buf-modes (buffer)
+  "Показывает активный major- и minor-режимы."
+  (format "%s %s"
+          (format-mode-line mode-name)
+          (mapconcat #'identity minor-mode-alist " ")))
+(push 'shaoline-segment-buf-modes (alist-get :right shaoline-segments))
+#+END_SRC
 
-** Свобода Echo Area
+Чтобы /убрать все стандартные сегменты/, сделай так:
 
-_"Когда чашка полна —  
-мастер попивает чай
-и не мешает."_  
+#+BEGIN_SRC emacs-lisp
+(setq shaoline-segments '((:left) (:center) (:right)))
+#+END_SRC
 
-Особая мудрость: Shaoline появляется только если echo area пуста. Любое emacs-сообщение важнее — Shaoline смиренно уступает место.  
+* Свобода echo area
 
----
+"Когда чаша переполнена —  
+мастер потягивает чай  
+и не тревожит поток."
 
-** Коаны
+Странная, но мудрая истина: Shaoline проявляется, только если echo area пуста. Любое сообщение Emacs имеет приоритет — Shaoline уступает с покорностью.
 
-_"Вопрос — твой учитель."_
+* Поиск Просветления
 
-- *Где моя mode-line?*  
-  Там, где нет Shaoline, — в нирване. Захоти — вернётся.
+Если просветление ускользает, попробуй так:
 
-- *Shaoline исчезает! Это просветление?*  
-  Если echo-area занята: Shaoline замолкает.  
-  Он ждёт, когда пустота вернётся, и лишь тогда проявит себя.
+- Включи =shaoline-debug= (=(setq shaoline-debug t)=) и изучи =*shaoline-logs*=.
+- Временно отключи другие пакеты для echo-area или mode-line — могут быть конфликты.
+- Убедись, что =(shaoline-mode 1)= вызван после остальных UI-настроек.
+- Переключить скрытие стандартной mode-line:  
+  =M-x customize-variable RET shaoline-autohide-modeline=  
+  или  
+  =(setq shaoline-autohide-modeline nil)=
 
-- Хочу свой сегмент: что делать?*  
-  Функция (buffer) → string, зарегистрирована через shaoline-define-segment — и ты уже мастер.
+* ЧАВО
 
----
+- /Где моя mode-line?/  
+  Там, где нет Shaoline — в Нирване. Возжелаешь — вернётся.
 
-** Невидимые свитки ШаоЛиня  
+- /Shaoline исчезает! Это просветление?/  
+  Если echo-area занята, Shaoline умолкает.  
+  Он ждёт возвращения пустоты, и тогда снова возникает.
 
-Включи `shaoline-debug` и весь путь строк и ошибок окажется в буфере `*shaoline-logs*`.  
-Там путешественник найдёт ответы на свои вопросы и следы страданий несовершенных сегментов.
+- /Хочу свой сегмент: что делать?/  
+  Функция (buffer) → строка, регистрация через shaoline-define-segment — ты уже мастер.
 
-** Тайные знания
+- /Как отлаживать Shaoline?/  
+  Включи =shaoline-debug= — и весь путь строк и ошибок появится в буфере =*shaoline-logs*=.
 
-- `shaoline-segments` – Опиши структуру строки: левый край, центр, правый край.  
-- `shaoline-autohide-modeline` – Истина, mode-line уйдёт прочь.  
-- `shaoline-update-hooks` – Хуки для реактивного обновления.
-- `shaoline-timer-interval` – Интервал для мудрого обновления времени и батареи.
-- `shaoline-message-timeout` – Сколько секунд пользовательское сообщение будет жить, прежде чем Shaoline его перекроет.
+* Таинственные знания
 
----
+- =shaoline-segments= — описывает структуру строки: левый, центральный, правый сегменты.
+- =shaoline-autohide-modeline= — если истина, классическая mode-line исчезает.
+- =shaoline-update-hooks= — события, вызывающие обновление строки.
+- =shaoline-timer-interval= — период обновления времени и батареи.
+- =shaoline-message-timeout= — через сколько секунд пользовательское сообщение исчезнет и Shaoline вернётся.
 
-** Segments по умолчанию
-- shaoline-segment-icon-and-buffer — иконка и имя буфера:  
-  _Даже пустой файл может быть иконой Дао._
-- shaoline-segment-git-branch — ветка git.
-- shaoline-segment-project-name — имя проекта, если есть.
-- shaoline-segment-battery — статус батареи (ибо и у ноутбука бренность).
-- shaoline-segment-time — текущее время (о временах — см. трактат Чжуан-цзы).
-- shaoline-segment-echo-message — echo message пользователя, если он есть.
+* Сравнение
 
+| Проект            | Echo Area | Скрывает modeline | Сегменты-функции    | Таймеры/Опрос | Минимум зависимостей |
+|-------------------+-----------+-------------------+---------------------+---------------+----------------------|
+| Shaoline          | Да        | Да                | Да                  | Нет           | Да                   |
+| doom-modeline     | Нет       | Опционально       | Частично            | Да            | Нет                  |
+| smart-mode-line   | Нет       | Опционально       | Нет                 | Да            | Нет                  |
+| telephone-line    | Нет       | Опционально       | Частично            | Да            | Нет                  |
 
+Shaoline — для ищущих спокойствие и пустоту: только echo area, никаких излишеств в окне.
 
-[GitHub: https://github.com/11111000000/shaoline]
+* Стандартные сегменты
 
----
+| Имя сегмента                    | Описание                                 | Внешний вид                               |
+|----------------------------------+------------------------------------------+-------------------------------------------|
+| shaoline-segment-icon-and-buffer | иконка и имя буфера                      |  README.org (иконка + имя буфера)        |
+| shaoline-segment-git-branch      | текущая ветка Git                        | иконка ветки + имя                        |
+| shaoline-segment-project-name    | имя проекта (projectile/project.el)      | "my-project"                              |
+| shaoline-segment-battery         | состояние батареи                        | 95% 🔋                                    |
+| shaoline-segment-time            | время (часы:минуты)                      | 09:21                                     |
+| shaoline-segment-echo-message    | echo message, если есть                  | ...                                       |
 
-** Картина
+* Прочее
+
+- Плотная интеграция с /projectile/ и /project.el/
+- Совместим с /use-package/ и /straight.el/
+- Лучше всего работает с Emacs 27+
+- Обращения, пожелания: [[https://github.com/11111000000/shaoline][GitHub |11111000000/shaoline]]
+
+* Обратная связь
+
+Вопросы, баги и предложения присылайте через  
+[GitHub issues](https://github.com/11111000000/shaoline)  
+или email: 11111000000@email.com
+
+* Иллюстрация
 
 #+ATTR_ORG: :width 80%
 [[file:screenshot-shaoline.png]]
 
----
+"Выполняй свою задачу — и познаешь довольство.  
+Shaoline появляется, когда это нужно,  
+а если исчезает — таков Путь."
 
-"Делай своё — и знай меру,  
-Shaoline появится, когда надо,  
-А если скрылся — значит, таков Путь."  
-
-Нести строку, не неся строку — вот совершенство!
+Модлайн без модлайна — вот совершенство!
 
