--- a/README.ru.org
+++ b/README.ru.org
@@ -1,7 +1,7 @@
 * Режим Shaoline: Путь Строки
 
 _"Дао, о котором можно говорить, не есть вечное Дао.  
-Мод, который можно увидеть, скоро потребует реформ."_
+Мод, который можно увидеть, пора переписать."_
 
 Когда открываешь Emacs и видишь строку, сотканную Shaoline,  
 знай: твой взгляд был слишком пристальным.  
