--- a/README.org
+++ b/README.org
@@ -1,16 +1,23 @@
-* pro-tabs
+*pro-tabs** — современный и настраиваемый мод, который приводит tab-bar и tab-line в Emacs к единому красивому стилю: с современными иконками, лаконичным внешним видом, глифами, волнообразными разделителями и без лишних кнопок. Основная цель — сделать стандартные вкладки в Emacs эстетичными, понятными и одинаково оформленными как в tab-bar, так и в tab-line. Всё выглядит целостно, лаконично и очень удобно для быстрого переключения между буферами и сессиями!
 
-**pro-tabs** — современный и настраиваемый мод для красивых, удобных  вкладок с иконками в Emacs.
+** Скриншот
 
-** Возможности
+#+ATTR_HTML: :width 800px
+[[./screenshot.png]]
 
-- Красивая отрисовка tab-bar и tab-line с поддержкой иконок (all-the-icons)
-- Компактный вид, без ненужных кнопок New/Close (по умолчанию)
-- Волнообразные (wave) XPM-разделители между вкладками
-- Одна клавиша — один tab (s-1 ... s-9, s-0)
-- Удобная интеграция с vterm и telega
-- Быстрое закрытие буфера и вкладки одной командой
-- Все основные параметры настраиваемы через M-x customize-group RET pro-tabs RET
+_(На скриншоте: в верхней части — tab-bar, ниже — tab-line; у каждой вкладки и буфера — своя иконка, плавные разноцветные разделители-волны, минимум лишних кнопок и элементов интерфейса.)_
+
+** Основные возможности
+
+- Единое оформление для tab-bar и tab-line: вкладки всегда выглядят одинаково современно.
+- Иконки для буферов и вкладок на основе all-the-icons: вы сразу видите, где code, где org, где shell и т.п.
+- Красивые глифы, emoji и оформление каждой вкладки.
+- Компактный вид — никакие кнопки New/Close и лишние элементы не отображаются (по умолчанию).
+- Волнообразные (wave, XPM) цветные разделители между вкладками для плавного интерфейса.
+- Быстрый выбор и переключение между вкладками с помощью одной клавиши (Super+1...Super+0).
+- Интеграция с vterm и telega: для них tab-line включается автоматически.
+- Быстрое закрытие и буфера, и вкладки одной командой.
+- Всё настраивается через M-x customize-group RET pro-tabs RET.
 
 ** Быстрый старт
 
@@ -20,50 +27,51 @@
 
 2. Скопируйте `pro-tabs.el` в любой каталог из вашего `load-path`.
 
-3. Добавьте в ваш init-файл:
+3. Добавьте в ваш init-файл строки:
 
    #+begin_src emacs-lisp
    (require 'pro-tabs)
    (pro-tabs-mode 1)
    #+end_src
 
-4. Опционально настройте переменные через `M-x customize-group RET pro-tabs`.
+4. Опционально настройте переменные через `M-x customize-group RET pro-tabs` или `setq` до активации мода.
 
 ** Основные команды
 
-- `M-x pro-tabs-mode` — включить/выключить мод.
-- `M-x pro-tabs-open-new-tab` — открыть новую вкладку с dashboard (если есть dashboard).
-- `M-x pro-tabs-close-tab-and-buffer` — закрыть текущий буфер и вкладку.
+- `M-x pro-tabs-mode` — включить/выключить мод (меняет оформление tab-bar и tab-line сразу).
+- `M-x pro-tabs-open-new-tab` — открыть новую Emacs-вкладку с dashboard (если установлен dashboard).
+- `M-x pro-tabs-close-tab-and-buffer` — закрыть одновременно текущий буфер и связанную с ним вкладку.
+- Быстрый переход: `s-1 ... s-9, s-0` — переключение между вкладками по их номеру.
 
 ** Настраиваемые переменные
 
-- `pro-tabs-enable-icons` (t/nil): включить или выключить иконки.
-- `pro-tabs-max-tab-name-length`: максимальная длина имени вкладки.
-- `pro-tabs-tab-bar-height`: высота таб-бара.
-- `pro-tabs-tab-line-height`: высота tab-line.
+- `pro-tabs-enable-icons` (t/nil): показывать ли иконки в tab-bar и tab-line.
+- `pro-tabs-max-tab-name-length`: максимальная длина подписи вкладки (лишнее будет сокращено с "…").
+- `pro-tabs-tab-bar-height`: высота вкладок в tab-bar (в пикселях).
+- `pro-tabs-tab-line-height`: высота вкладок в tab-line (в пикселях).
 
-Меняйте их через customize или обычным `setq` до `(pro-tabs-mode 1)`.
+Меняйте их через customize (`M-x customize-group RET pro-tabs RET`) или с помощью `setq` до запуска `(pro-tabs-mode 1)`.
 
 ** Автотесты
 
-Для запуска тестов откройте Emacs, загрузите пакет (или находясь в каталоге с pro-tabs):
+Для запуска автотестов:
 
 1. Откройте файл `pro-tabs-test.el` и выполните:
-#+begin_src 
+   #+begin_src emacs-lisp
    M-x ert RET pro-tabs- RET
-#+end_src
-  чтобы увидеть список всех тестов pro-tabs.
+   #+end_src
+   — появится список всех тестов для pro-tabs.
 
-   Или из Lisp:
+   Либо из Lisp:
 
-   #+begin_src 
+   #+begin_src emacs-lisp
    (ert 'pro-tabs-enable-disable)
    #+end_src
 
 ** Требования
 
-- Emacs 27.1+
-- [all-the-icons](https://github.com/domtronn/all-the-icons.el)
+- Emacs 27.1 или выше
+- [all-the-icons](https://github.com/domtronn/all-the-icons.el) (для поддержки иконок)
 
 ** Лицензия
 
@@ -71,5 +79,5 @@ MIT
 
 ---
 
-Автор: Peter Kosov
-Ссылки: https://github.com/11111000000/pro-tabs
+Автор: Peter Kosov  
+Ссылка на репозиторий: https://github.com/11111000000/pro-tabs
